Feat: Aula8, curso CSS finalizado

--- a/CSS/Aula 8 - Grid Layout e Unidade fr/index.html
+++ b/CSS/Aula 8 - Grid Layout e Unidade fr/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aula 6 - Flexbox e Alinhamentos</title>
+  <title>Aula 8 - Grid Layout e Unidade "fr"</title>
 
   <link rel="stylesheet" href="style.css">
 
@@ -17,7 +17,7 @@
 
     <br/>
 
-    <h2> Flexbox </h2>
+    <h2> Gridbox </h2>
 
     <br/>
     
